<resources>
    <string name="app_name">cs193a_hw1_nfakih</string>
    <string name="rock_paper_scissors">Rock, Paper, Scissors!</string>
    <string name="picture_of_a_cartoon_rock">picture of a cartoon rock</string>
    <string name="picture_of_a_cartoon_paper">picture of a cartoon paper</string>
    <string name="play">PLAY</string>
    <string name="_0">0</string>
    <string name="select_your_weapon_of_choice_press_play_and_try_to_beat_your_phone">Select your weapon of choice,
        press play and try to beat your phone!
    </string>
    <string name="human">Human:</string>
    <string name="computer">Computer:</string>
    <string name="picture_of_cartoon_scissors">picture of cartoon scissors</string>
</resources>
