<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/rock_paper_scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleText"
            app:fontFamily="serif" android:textSize="30sp"
            tools:layout_editor_absoluteY="9dp" tools:layout_editor_absoluteX="40dp"/>

    <TextView
            android:layout_width="332dp"
            android:layout_height="48dp"
            android:text="@string/select_your_weapon_of_choice_press_play_and_try_to_beat_your_phone"
            android:id="@+id/rulesText"
            android:textSize="18sp" app:fontFamily="serif" tools:layout_editor_absoluteY="51dp"
            tools:layout_editor_absoluteX="26dp"/>
        <GridLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:rowCount="2" android:columnCount="2">

            <ImageButton
                    android:layout_width="175dp"
                    android:layout_height="175dp" app:srcCompat="@drawable/rock"
                    android:id="@+id/rockButton"
                    android:contentDescription="@string/picture_of_a_cartoon_rock"
                    tools:layout_editor_absoluteY="99dp" tools:layout_editor_absoluteX="8dp"
                    style="?android:attr/borderlessButtonStyle" android:onClick="rockButtonClick"/>
            <ImageButton
                    android:layout_width="175dp"
                    android:layout_height="175dp" app:srcCompat="@drawable/paper"
                    android:id="@+id/paperButton"
                    android:contentDescription="@string/picture_of_a_cartoon_paper"
                    tools:layout_editor_absoluteY="100dp" tools:layout_editor_absoluteX="201dp"
                    style="?android:attr/borderlessButtonStyle" android:onClick="paperButtonClick"/>
            <ImageButton
                    android:layout_height="175dp" app:srcCompat="@drawable/scissors"
                    android:id="@+id/scissorsButton"
                    android:contentDescription="@string/picture_of_cartoon_scissors"
                    android:layout_width="175dp"
                    tools:layout_editor_absoluteY="274dp" tools:layout_editor_absoluteX="14dp"
                    style="?android:attr/borderlessButtonStyle" android:onClick="scissorsButtonClick"/>
            <Button
                    android:text="@string/play"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:id="@+id/playButton" android:textSize="40sp"
                    android:typeface="monospace"
                    tools:layout_editor_absoluteY="272dp" tools:layout_editor_absoluteX="195dp"
                    style="?android:attr/borderlessButtonStyle" android:onClick="playButtonClick"/>
    </GridLayout>

    <GridLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:rowCount="2" android:columnCount="3">
        <TextView
                android:text="@string/human"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/humanText" android:textSize="24sp"
                tools:layout_editor_absoluteY="454dp" tools:layout_editor_absoluteX="25dp"/>
            <TextView
                    android:text="@string/_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="156dp" android:id="@+id/humanScore" android:textSize="24sp"
                    tools:layout_editor_absoluteY="454dp" android:layout_columnSpan="2" android:layout_gravity="center"/>

        <TextView
                android:text="@string/computer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/computerText" android:textSize="24sp"
                tools:layout_editor_absoluteY="4534p" tools:layout_editor_absoluteX="209dp"/>
            <TextView
                    android:text="@string/_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="345dp" android:id="@+id/computerScore" android:textSize="24sp"
                    tools:layout_editor_absoluteY="454dp"
                    android:layout_columnSpan="2" android:layout_gravity="center"/>
    </GridLayout>
</LinearLayout>